--- a/web/src/css/login.less
+++ b/web/src/css/login.less
@@ -1,6 +1,9 @@
 #login {
-    width: 30%;
+    width: 20%;
     margin: 100px auto;
+    position: absolute;
+    left: 0;
+    right: 0;
     .title {
         font-size: 30px;
         text-align: center;
@@ -9,6 +12,18 @@
     .content {
         input {
             width: 100%;
+        }
+        .login-btn {
+            margin-top: 30px;
+        }
+        .on-login {
+            position: relative;
+            float: right;
+            top: 58px;
+            z-index: 1;
+            i {
+                font-size: 24px;
+            }
         }
     }
 }
