1. 前后台融合完成

--- a/web/src/app/css/main.less
+++ b/web/src/app/css/main.less
@@ -1,7 +1,7 @@
-#main {
-    .app-bar-title {
-        box-shadow: none!important;
-    }
+//#main {
+//    .app-bar-title {
+//        box-shadow: none!important;
+//    }
     .menu {
         .menu-title {
             background-color: #00BCD4;
@@ -12,4 +12,4 @@
             padding: 0 16px;
         }
     }
-}
+//}
