--- a/web/src/app/css/newArticle.less
+++ b/web/src/app/css/newArticle.less
@@ -1,6 +1,8 @@
 #new-article {
     .article-title {
         z-index: 99;
+        font-size: 20px!important;
+        font-weight: bold;
     }
     .article-date {
         color: #555;
