列表接口对接完成，小闭环ok

--- a/web/src/app/css/newArticle.less
+++ b/web/src/app/css/newArticle.less
@@ -2,8 +2,10 @@
     padding: 20px 40px;
     .article-title {
         z-index: 99;
-        font-size: 20px!important;
-        font-weight: bold;
+        font-size: 24px!important;
+        hr {
+            bottom: 0!important;
+        }
     }
     .article-date {
         color: #555;
@@ -18,7 +20,7 @@
         right: 0;
         top: 0;
         left: 256px;
-        padding: 196px 40px;
+        padding: 192px 40px;
         z-index: 9;
         height: 100%;
         width: 1024px;
