--- a/web/src/app/css/base.less
+++ b/web/src/app/css/base.less
@@ -5,3 +5,10 @@ body {
 .y-hide {
     display: none!important;
 }
+
+ul {
+    outline: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
