--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -1,5 +1,38 @@
 #home {
     background-color: #f9f9f9;
+    .head-move {
+        position: fixed;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        height: 90px;
+        background: none;
+        .menu-logo {
+            display: flex;
+            width: 100px;
+            text-align: center;
+            margin: 0 200px 0 100px;
+            img {
+                height: 90px;
+            }
+        }
+        .menu-list {
+            display: flex;
+            width: 500px;
+            justify-content: space-between;
+            .menu-item {
+                height: 90px;
+                line-height: 90px;
+                padding: 0 30px;
+                transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+                -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+                cursor: pointer;
+            }
+            .menu-item:hover {
+                background-color: rgba(0, 0, 0, 0.0980392);
+            }
+        }
+    }
     .head {
         display: flex;
         align-items: center;
@@ -30,6 +63,11 @@
             .menu-item:hover {
                 background-color: rgba(0, 0, 0, 0.0980392);
             }
+        }
+    }
+    .banner {
+        img {
+            width: 100%;
         }
     }
     .content {
