--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -38,6 +38,13 @@
             }
 
             line-height: 2;
+
+            blockquote {
+                margin: 20px 0;
+                padding: 10px 30px;
+                background: #F2F4F6;
+                border-left: 10px solid #E8EDEE;
+            }
         }
     }
     .article-sidebar {
