--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -1,5 +1,18 @@
 #article-detail {
     display: flex;
+    color: #2D3F50;
+    h1 {
+        font-size: 40px;
+    }
+    h2 {
+        font-size: 32px;
+    }
+    h3 {
+        font-size: 24px;
+    }
+    h4 {
+        font-size: 16px;
+    }
 
     .article-main {
         flex: 1;
@@ -8,6 +21,7 @@
             font-size: 50px;
             line-height: 50px;
             margin-bottom: 10px;
+            font-weight: bold;
         }
         .article-date {
             font-size: 14px;
@@ -25,7 +39,7 @@
                     content: "";
                     display: block;
                     position: relative;
-                    top: 18px;
+                    top: 19px;
                     left: -20px;
                     width: 6px;
                     height: 6px;
@@ -41,7 +55,7 @@
 
             blockquote {
                 margin: 20px 0;
-                padding: 10px 30px;
+                padding: 1px 30px;
                 background: #F2F4F6;
                 border-left: 10px solid #E8EDEE;
             }
