优化首页样式，改善整体风格

--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -106,8 +106,8 @@
     .content {
         padding-bottom: 100px;
         font-size: 16px;
-        font-family: "Merriweather", serif;
         letter-spacing: 0.01rem;
+        word-break: break-all;
         .article-list {
             display: flex;
             align-items: center;
@@ -115,8 +115,8 @@
             flex-direction: column;
             flex-wrap: wrap;
             .article-item {
-                color: #4f4f4f;
-                margin-top: 50px;
+                color: #3A4145;
+                margin-top: 46px;
                 background-color: #fff;
                 cursor: pointer;
                 width: 56%;
@@ -163,8 +163,8 @@
                     justify-content: space-between;
                     margin: 0 20px;
                     line-height: 24px;
-                    font-size: 16px;
-                    border-bottom: 1px solid #f2f3f2;
+                    font-size: 15px;
+                    border-bottom: 1px solid #ebf2f6;
                     padding: 10px 0 50px 0;
                     color: #9eabb3;
                     .count {
@@ -178,17 +178,18 @@
                         display: flex;
                         justify-content: space-between;
                         align-items: center;
-                        width: 170px;
+                        width: 220px;
                         img {
-                            width: 28px;
-                            border-radius: 28px;
+                            width: 24px;
+                            border-radius: 24px;
                         }
                         .author-name {
-                            border-right: 1px solid #ddd;
-                            padding-right: 16px;
+                            border-right: 1px solid #d5dbde;
+                            padding-right: 10px;
                         }
                         .article-time {
-                            padding-left: 6px;
+                            font-size: 13px;
+                            //padding-left: 6px;
                         }
                     }
                 }
