--- a/web/src/app/css/base.less
+++ b/web/src/app/css/base.less
@@ -1,10 +1,10 @@
 body {
     margin: 0;
-    font-family: Tahoma,Helvetica,Arial,'黑体',sans-serif;
+    font-family: 'Open Sans', Tahoma, Helvetica, Arial, '黑体', sans-serif!important;
 }
 
 .y-hide {
-    display: none!important;
+    display: none !important;
 }
 
 ul {
@@ -12,4 +12,26 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+    -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+    -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+    color: #2E2E2E;
+    line-height: 1.15em;
+    margin: 0 0 0.4em 0;
+    font-family: "Open Sans", sans-serif;
+    text-rendering: geometricPrecision;
+}
+
+h2 {
+    font-size: 36px;
+    letter-spacing: -1px;
+}
+
+html {
+    font-family: sans-serif;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
