内部markdown 风格 done

--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -122,8 +122,8 @@
                 width: 56%;
                 position: relative;
 
-                -webkit-transition: box-shadow .3s ease-in,-webkit-transform .2s ease-in;
-                transition: box-shadow .3s ease-in,transform .2s ease-in;
+                -webkit-transition: box-shadow .3s ease-in, -webkit-transform .2s ease-in;
+                transition: box-shadow .3s ease-in, transform .2s ease-in;
 
                 .item-banner {
                     width: 578px;
@@ -196,16 +196,16 @@
 
             }
             .article-item:hover {
-                -webkit-transform: translate(0,-2px);
-                transform: translate(0,-2px);
-                box-shadow: 0 3px 10px rgba(0,0,0,.06);
+                -webkit-transform: translate(0, -2px);
+                transform: translate(0, -2px);
+                box-shadow: 0 3px 10px rgba(0, 0, 0, .06);
                 .item-footer {
                     border-color: #fff;
                 }
                 &::after {
-                    -webkit-transition: box-shadow .3s ease-in,-webkit-transform .2s ease-in;
-                    transition: box-shadow .3s ease-in,transform .2s ease-in;
-                    box-shadow: #fff 0 0 0 5px, 0 7px 9px rgba(0,0,0,.06);
+                    -webkit-transition: box-shadow .3s ease-in, -webkit-transform .2s ease-in;
+                    transition: box-shadow .3s ease-in, transform .2s ease-in;
+                    box-shadow: #fff 0 0 0 5px, 0 7px 9px rgba(0, 0, 0, .06);
                 }
             }
             .article-item:after:hover {
@@ -224,8 +224,8 @@
                 background: #fff;
                 border-radius: 100%;
                 box-shadow: #fff 0 0 0 5px;
-                -webkit-transition: box-shadow .3s ease-in,-webkit-transform .2s ease-in;
-                transition: box-shadow .3s ease-in,transform .2s ease-in;
+                -webkit-transition: box-shadow .3s ease-in, -webkit-transform .2s ease-in;
+                transition: box-shadow .3s ease-in, transform .2s ease-in;
             }
         }
     }
