--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -3,15 +3,19 @@
     color: #2D3F50;
     h1 {
         font-size: 40px;
+        margin: 30px 0 22px 0;
     }
     h2 {
         font-size: 32px;
+        margin: 30px 0 22px 0;
     }
     h3 {
         font-size: 24px;
+        margin: 30px 0 22px 0;
     }
     h4 {
         font-size: 16px;
+        margin: 30px 0 22px 0;
     }
 
     .article-main {
@@ -25,31 +29,12 @@
         }
         .article-date {
             font-size: 14px;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
+            padding-left: 5px;
             color: #9EABB3;
         }
         .article-content {
             overflow: auto;
-            ul {
-                margin: 30px 0 30px 62px;
-                li {
-
-                }
-                li::before {
-                    content: "";
-                    display: block;
-                    position: relative;
-                    top: 19px;
-                    left: -20px;
-                    width: 6px;
-                    height: 6px;
-                    background: #767688;
-                    -moz-border-radius: 50px;
-                    -webkit-border-radius: 50px;
-                    border-radius: 50px;
-                }
-
-            }
 
             line-height: 2;
 
@@ -65,4 +50,52 @@
         width: 300px;
         background-color: yellow;
     }
+    pre {
+        padding: 16px 22px;
+        overflow: auto;
+        font-size: 85%;
+        line-height: 1.45;
+        background-color: #f6f6f6;
+        border-radius: 3px;
+        line-height: 2;
+        border-radius: 5px;
+    }
+
+    code, kbd, pre, samp {
+        font-family: Monaco, Source Code Pro, Consolas, Menlo, Monaco, Courier New, monospace;
+    }
+
+    table {
+        width: 100%;
+        border: 1px solid #f2f2f2;
+        padding: 0px 10px;
+        margin: 10px 0;
+        border-collapse: collapse;
+        td, th {
+            border: 1px solid #f2f2f2;
+            padding: 0 10px 2px 10px;
+        }
+    }
+    ul {
+        padding-left: 36px;
+        margin: 0 0 32px 20px;
+        li {
+            margin: 8px 0;
+        }
+        li::before {
+            content: "";
+            display: block;
+            position: relative;
+            top: 19px;
+            left: -20px;
+            width: 6px;
+            height: 6px;
+            background: #3A4145;
+            -moz-border-radius: 50px;
+            -webkit-border-radius: 50px;
+            border-radius: 50px;
+        }
+
+    }
+
 }
