--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -232,10 +232,30 @@
     .footer {
         height: 300px;
         width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         background-color: #212121;
         color: #fff;
+        font-size: 15px;
+        .footer-content {
+            text-align: center;
+            padding-top: 80px;
+            color: rgba(255, 255, 255, 0.541176);
+            .footer-content-github {
+                margin: 10px 0 30px 0;
+                span {
+                    color: rgba(255, 255, 255, 0.870588) !important;
+                }
+            }
+            .ICP {
+                font-size: 12px;
+                img {
+                    position: relative;
+                    top: 3px;
+                    margin: 0 8px;
+                    width: 14px;
+                    height: 14px;
+                    border-radius: 14px;
+                }
+            }
+        }
     }
 }
