--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -48,7 +48,35 @@
     }
     .article-sidebar {
         width: 300px;
-        background-color: yellow;
+        margin: 280px 20px 20px 20px;
+        .article-sidebar-category {
+            font-size: 20px;
+            line-height: 20px;
+        }
+        .article-sidebar-category-list {
+            color: #fff;
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            font-size: 12px;
+            margin-top: 20px;
+
+            .category-item {
+                padding: 1px 12px;
+                background: #DADADA;
+                border-radius: 5px;
+                margin: 5px 10px 5px 0;
+                height: 24px;
+                line-height: 22px;
+                transition: all 1000ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+            }
+
+            .category-item:hover {
+                background-color: #1FBCD2;
+                color: #fff;
+                cursor: pointer;
+            }
+        }
     }
     pre {
         padding: 16px 22px;
