--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -53,7 +53,7 @@
             font-size: 20px;
             line-height: 20px;
         }
-        .article-sidebar-category-list {
+        .article-sidebar-tag-list {
             color: #fff;
             display: flex;
             justify-content: flex-start;
@@ -61,9 +61,9 @@
             font-size: 12px;
             margin-top: 20px;
 
-            .category-item {
+            .tag-item {
                 padding: 1px 12px;
-                background: #DADADA;
+                background: rgba(0, 0, 0, 0.1);
                 border-radius: 5px;
                 margin: 5px 10px 5px 0;
                 height: 24px;
@@ -71,7 +71,7 @@
                 transition: all 1000ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
             }
 
-            .category-item:hover {
+            .tag-item:hover {
                 background-color: #1FBCD2;
                 color: #fff;
                 cursor: pointer;
