--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -143,19 +143,26 @@
                     padding: 12px 20px 10px 20px;
                     .item-content-more {
                         position: relative;
-                        top: 2px;
-                        margin-left: 10px;
                         text-align: right;
-                        color: #a2a2a2;
+                        color: #909090;
                         transition: all .3s ease-in;
                         -webkit-transition: all .3s ease-in;
 
                         i {
+                            top: 2px;
+                            position: relative;
+                            margin-left: 10px;
                             font-size: 18px;
+                            color: #a2a2a2;
+                            transition: all .3s ease-in;
+                            -webkit-transition: all .3s ease-in;
                         }
                     }
                     .item-content-more:hover {
                         color: #ff4081;
+                        i {
+                            color: #ff4081;
+                        }
                     }
                 }
                 .item-footer {
