fix management table style

--- a/web/src/app/css/articleList.less
+++ b/web/src/app/css/articleList.less
@@ -6,4 +6,10 @@
             color: #0e0e0e!important;
         }
     }
+    table {
+        border: none;
+        th, td {
+            border: none;
+        }
+    }
 }
