--- a/web/src/app/css/articleCategory.less
+++ b/web/src/app/css/articleCategory.less
@@ -14,6 +14,7 @@
             .category-label-repeat {
                 -webkit-font-smoothing: initial;
                 margin-right: 10px!important;
+                margin-bottom: 15px!important;
                 svg {
                     opacity: 0;
                 }
