前端newArticle增加分类

--- a/web/src/app/css/newArticle.less
+++ b/web/src/app/css/newArticle.less
@@ -10,8 +10,13 @@
     .article-date {
         color: #555;
         font-size: 16px;
-        padding: 20px 0;
+        padding: 20px 0 6px 0;
         position: relative;
+        z-index: 99;
+    }
+    .article-category {
+        color: #555;
+        font-size: 16px;
         z-index: 99;
     }
     #article-editor {
@@ -20,7 +25,7 @@
         right: 0;
         top: 0;
         left: 256px;
-        padding: 192px 40px;
+        padding: 250px 40px;
         z-index: 9;
         height: 100%;
         width: 1024px;
