管理页面对接删除接口

--- a/web/src/app/css/articleList.less
+++ b/web/src/app/css/articleList.less
@@ -11,5 +11,9 @@
         th, td {
             border: none;
         }
+        .option {
+            width: 200px;
+            text-align: center!important;
+        }
     }
 }
