--- a/web/src/app/css/markdown.less
+++ b/web/src/app/css/markdown.less
@@ -33,6 +33,7 @@ pre {
 
 code, kbd, pre, samp {
     font-family: Monaco, Source Code Pro, Consolas, Menlo, Monaco, Courier New, monospace;
+    white-space: pre;
 }
 
 table {
