--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -1,4 +1,7 @@
 #article-detail {
+    img {
+        width: 100%;
+    }
     .article-detail-content {
         display: flex;
         color: #2D3F50;
