--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -114,6 +114,9 @@
             flex-direction: column;
             flex-wrap: wrap;
             .article-item {
+                img {
+                    width: 100%;
+                }
                 color: #3A4145;
                 margin-top: 46px;
                 background-color: #fff;
