--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -27,7 +27,7 @@
             margin: 100px 50px 50px 150px;
             .article-title {
                 font-size: 50px;
-                line-height: 50px;
+                line-height: 1.5;
                 margin-bottom: 10px;
                 font-weight: bold;
             }
