--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -187,16 +187,16 @@
                         display: flex;
                         justify-content: space-between;
                         align-items: center;
-                        width: 220px;
                         img {
                             width: 24px;
                             border-radius: 24px;
                         }
                         .author-name {
                             border-right: 1px solid #d5dbde;
-                            padding-right: 11px;
+                            padding: 0 12px 0 10px;
                         }
                         .article-time {
+                            padding-left: 12px;
                             font-size: 13px;
                         }
                     }
