--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -266,4 +266,26 @@
             }
         }
     }
+    .goup {
+        position: fixed;
+        display: none;
+        opacity: 0.4;
+        right: 100px;
+        bottom: 100px;
+        cursor: pointer;
+        -webkit-transition: all ease-in 200ms;
+        i {
+            font-size: 35px;
+            color: #abb2b5;
+        }
+        &:hover {
+            opacity: 1;
+        }
+    }
+    .goup-show {
+        display: block;
+    }
+    .goup-hide {
+        display: none;
+    }
 }
