--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -130,12 +130,7 @@
 
         }
     }
-    .ds-thread {
-        margin: 0px 150px 30px 150px;
-    }
-    #SOHUCS {
-        margin-right: 60px;
-        margin-left: 145px;
-        width: auto;
+    .cloud-tie-wrapper {
+        margin: 10px 45px 30px 125px;
     }
 }
