--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -130,7 +130,9 @@
 
         }
     }
-    .cloud-tie-wrapper {
-        margin: 10px 125px 30px 125px;
+    #SOHUCS {
+        margin-right: 145px;
+        margin-left: 145px;
+        width: auto;
     }
 }
