--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -130,9 +130,9 @@
 
         }
     }
-    #SOHUCS {
-        margin-right: 145px;
-        margin-left: 145px;
-        width: auto;
-    }
+    //#SOHUCS {
+    //    margin-right: 145px;
+    //    margin-left: 145px;
+    //    width: auto;
+    //}
 }
