--- a/web/src/app/css/articleDetail.less
+++ b/web/src/app/css/articleDetail.less
@@ -71,6 +71,11 @@
 
                 }
             }
+            #SOHUCS {
+                margin-top: 55px;
+                padding-top: 50px;
+                border-top: 1px dashed #ddd;
+            }
         }
         .article-sidebar {
             width: 300px;
@@ -132,9 +137,5 @@
         }
 
     }
-    //#SOHUCS {
-    //    margin-right: 145px;
-    //    margin-left: 145px;
-    //    width: auto;
-    //}
+
 }
