--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -29,9 +29,36 @@
                 transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
                 -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
                 cursor: pointer;
+                white-space: nowrap;
+                position: relative;
+                .line {
+                    opacity: 0;
+                    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+                    &::after {
+                        position: absolute;
+                        top: 65px;
+                        left: 0;
+                        right: 0;
+                        content: ' ';
+                        margin: 0 auto;
+                        height: 2px;
+                        width: 60%;
+                        background-color: #666;
+                    }
+                }
             }
+
+            .menu-item.selected {
+                .line {
+                    opacity: 1;
+                }
+            }
+
             .menu-item:hover {
                 background-color: rgba(0, 0, 0, 0.0980392);
+                .line {
+                    opacity: 1;
+                }
             }
         }
     }
