add view and comment count

--- a/web/src/app/css/home.less
+++ b/web/src/app/css/home.less
@@ -208,6 +208,13 @@
                             display: flex;
                             width: 100px;
                             justify-content: space-around;
+                            .count-item {
+                                font-size: 14px;
+                                i {
+                                    position: relative;
+                                    top: 1px;
+                                }
+                            }
                         }
                     }
                     .author {
