--- a/web/src/app/css/about.less
+++ b/web/src/app/css/about.less
@@ -11,6 +11,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+        margin-bottom: 50px;
         .logo {
             width: 300px;
             margin-top: 20px;
@@ -28,21 +29,18 @@
     }
     .body {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         margin-bottom: 100px;
-        .left {
-            display: flex;
-            flex: 1;
-            flex-direction: column;
-            .life {
-                .title {
-                    font-size: 30px;
-                }
+
+        .life {
+
+            .title {
+                font-size: 30px;
             }
-            .work {
-                .title {
-                    font-size: 30px;
-                }
+        }
+        .work {
+            .title {
+                font-size: 30px;
             }
         }
         .right {
