about me better

--- a/web/src/app/css/about.less
+++ b/web/src/app/css/about.less
@@ -6,6 +6,8 @@
     flex-direction: column;
     margin: 0 auto;
     font-size: 16px;
+    font-family: "Microsoft YaHei", Helvetica, Arial, 'Hiragino Sans GB', '微软雅黑', sans-serif;
+
     .head {
         display: flex;
         flex-direction: column;
@@ -18,8 +20,9 @@
             margin-top: 20px;
         }
         .discription {
-            font-size: 26px;
+            font-size: 28px;
             font-weight: bold;
+            font-family: "Helvetica Neue", Helvetica, Arial, 'Hiragino Sans GB', 'Microsoft Yahei', '微软雅黑', sans-serif;
         }
     }
     .line {
@@ -36,11 +39,13 @@
         .about_me {
             .title {
                 font-size: 30px;
+                font-family: "Helvetica Neue", Helvetica, Arial, 'Hiragino Sans GB', 'Microsoft Yahei', '微软雅黑', sans-serif;
             }
         }
         .about_power {
             .title {
                 font-size: 30px;
+                font-family: "Helvetica Neue", Helvetica, Arial, 'Hiragino Sans GB', 'Microsoft Yahei', '微软雅黑', sans-serif;
                 span {
                     font-size: 16px;
                 }
@@ -52,6 +57,7 @@
             }
         }
         .contact_me {
+            font-family: "Helvetica Neue", Helvetica, Arial, 'Hiragino Sans GB', 'Microsoft Yahei', '微软雅黑', sans-serif;
             .title {
                 font-size: 30px;
             }
@@ -62,6 +68,7 @@
         .attention {
             .title {
                 font-size: 30px;
+                font-family: "Helvetica Neue", Helvetica, Arial, 'Hiragino Sans GB', 'Microsoft Yahei', '微软雅黑', sans-serif;
             }
             .attention_list {
                 display: flex;
